2012-08-13  MORITA Hajime  <morrita@google.com>

        Unreviewed update for webcomponents-bugzilla address.

        * Scripts/webkitpy/common/config/committers.py:

2012-08-11  Raphael Kubo da Costa  <rakuco@webkit.org>

        [CMake] Rewrite FindLibSoup2.cmake.
        https://bugs.webkit.org/show_bug.cgi?id=93191

        Reviewed by Rob Buis.

        * DumpRenderTree/efl/CMakeLists.txt: Use LIBSOUP_FOO instead of
        LIBSOUP24_FOO, and do not use LIBSOUP24_LDFLAGS, as it is not
        needed anymore.
        * EWebLauncher/CMakeLists.txt: Ditto.
        * MiniBrowser/efl/CMakeLists.txt: Ditto.
        * TestWebKitAPI/PlatformEfl.cmake: Ditto.
        * WebKitTestRunner/CMakeLists.txt: Ditto.
        * WebKitTestRunner/PlatformEfl.cmake: Ditto.

2012-08-13  Brady Eidson  <beidson@apple.com>

        With asynchronous plug-in initialization, WebProcess and PluginProcess can deadlock
        <rdar://problem/12062125> and https://bugs.webkit.org/show_bug.cgi?id=93894

        Reviewed by Alexey Proskuryakov.

        Add a test that calls out to NPP_Evaluate for some JS inside of NPP_New.

        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:
        * DumpRenderTree/TestNetscapePlugIn/Tests/EvaluateJSWithinNPP_New.cpp: Added.
        (EvaluteJSWithinNPP_New):
        (EvaluteJSWithinNPP_New::EvaluteJSWithinNPP_New):
        (EvaluteJSWithinNPP_New::NPP_New):

2012-08-13  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r125422.
        http://trac.webkit.org/changeset/125422
        https://bugs.webkit.org/show_bug.cgi?id=93902

        Broke the Android canary build (Requested by fmalita on
        #webkit).

        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:
        * TestWebKitAPI/TestWebKitAPI.gyp/TestWebKitAPI.gyp:

2012-08-13  Raphael Kubo da Costa  <rakuco@webkit.org>

        [CMake] Remove glib-related Find modules and write single new one instead.